trunk/Archive2/63/e3f9b2e150381d/output
main.cpp: In function ‘int main()’:
main.cpp:12:36: error: invalid static_cast from type ‘Type’ to type ‘int&’
     int& n = static_cast<int&>(type);
                                    ^
main.cpp:12:10: warning: unused variable ‘n’ [-Wunused-variable]
     int& n = static_cast<int&>(type);
          ^
